--- a/twtsus-server/views/layout.jade
+++ b/twtsus-server/views/layout.jade
@@ -2,6 +2,12 @@ doctype html
 html
   head
     title= title
+    link(rel='chrome-webstore-item', href='https://chrome.google.com/webstore/detail/apdfllckaahabafndbhieahigkjlhalf')
+    link(href='http://fonts.googleapis.com/css?family=Roboto:400,300', rel='stylesheet',type='text/css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    div.centered.upsell-container
+      p Save time and see full-length tweets right on Twitter.
+      button#install-button(onclick="chrome.webstore.install()") Get Chrome extension
     block content
+
