--- a/twtsus-server/public/stylesheets/style.css
+++ b/twtsus-server/public/stylesheets/style.css
@@ -1,8 +1,49 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Roboto", "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-weight: 200;
 }
 
 a {
   color: #00B7FF;
+}
+
+.centered {
+  text-align: center;
+}
+
+.upsell-container {
+  max-width: 700px;
+  border: 3px solid #E0DFDF;
+  margin: 0 auto 20px auto;
+  border-radius: 11px;
+  padding: 20px;
+}
+
+.upsell-container p {
+  font-size: 1.4em;
+}
+
+#install-button {
+  width: 200px;
+  text-align: center;
+  height: 49px;
+  padding: 0 !important;
+  text-transform: uppercase;
+  margin: 10px auto 10px auto;
+  display: block;
+  cursor: pointer;
+  border-color: transparent;
+  background-color: #55ACEE;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 6px;
+  letter-spacing: 0.08em;
+}
+
+.tweet {
+  font-size: 1.6em;
+  line-height: 1.7em;
+  max-width: 700px;
+  margin: 0 auto;
 }
