Many changes for chrome store

--- a/twtsus-server/views/index.jade
+++ b/twtsus-server/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .hero
+    img(src="images/twtus-promo.gif")
+    p.tagline Tweet as long as you'd like. Right on Twitter.
+    button.install-button() Get Chrome extension  
