--- a/twtsus-server/public/stylesheets/style.css
+++ b/twtsus-server/public/stylesheets/style.css
@@ -1,5 +1,11 @@
+body, html {
+  height: 100%;
+  min-height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  padding: 50px;
   font: 14px "Roboto", "Lucida Grande", Helvetica, Arial, sans-serif;
   font-weight: 200;
 }
@@ -46,4 +52,56 @@ a {
   line-height: 1.7em;
   max-width: 700px;
   margin: 0 auto;
+}
+
+.brand {
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  margin: 0;
+}
+
+.hero {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 30px;
+  box-sizing: border-box;
+}
+
+.hero img {
+  max-width: 100%;
+  background: #f6f7f8;
+  padding: 4px;
+}
+
+.tagline {
+  font-size: 1.5em;
+  font-size: 400;
+  text-align: center;
+}
+
+.install-button {
+  width: 200px;
+  text-align: center;
+  height: 49px;
+  padding: 0 !important;
+  text-transform: uppercase;
+  margin: 10px auto 10px auto;
+  display: block;
+  cursor: pointer;
+  border-color: transparent;
+  background-color: #55ACEE;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 6px;
+  letter-spacing: 0.08em;
+  outline: none;
+  transition: margin 0.2s ease-in;
+}
+
+.install-button:active {
+  outline: none;
+  transform: translateY(2px);
+  box-shadow: 0 0 4px rgba(0,0,0,0.15);
 }
