UPdate install button

--- a/twtsus-server/views/index.jade
+++ b/twtsus-server/views/index.jade
@@ -4,4 +4,4 @@ block content
   .hero
     img(src="images/twtus-promo.gif")
     p.tagline Tweet as long as you'd like. Right on Twitter.
-    button.install-button() Get Chrome extension  
+    button.install-button(onclick="chrome.webstore.install()") Get Chrome extension  
