--- a/twtsus-server/views/layout.jade
+++ b/twtsus-server/views/layout.jade
@@ -2,11 +2,22 @@ doctype html
 html
   head
     title= title
+    meta(name="description", content="Twts.us allows you to tweet longer than 140 characters, as long as you like. Write and read full-length tweets right on Twitter. Also accessible and user friendly on mobile devices.")
+    meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
     link(rel='chrome-webstore-item', href='https://chrome.google.com/webstore/detail/ppcljnbmajemebacnlfeceldahlbgmno')
     link(href='http://fonts.googleapis.com/css?family=Roboto:400,300', rel='stylesheet',type='text/css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    a.brand(href="/", title="Twts")
-      img(width="100", src="images/twtsus_logo.png", alt="Twts - Tweet as long as you like")
+    a.brand(href="/", title="Twts - Tweet as long as you like") twts
     block content
+    footer
+      p.made-by Made by 
+        a(href="http://www.github.com/phamtrisi") Si Pham
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-21335812-4', 'auto');
+      ga('send', 'pageview');
